[package]
name = "loadable_yaml_macro_derive"
version = "0.1.0"
authors = ["Joe Tsoi <joetsoi@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.3"
syn = "0.14.4"
# warmy = "0.8.0"
# serde_yaml = "*"

# compat_error = {path = "../compat_error"}

# [dependencies.ggez]
# git = "https://github.com/ggez/ggez"
# default-features = false
