[package]
edition = '2018'
name = "openmoonstone"
version = "0.2.0"
authors = ["Joe Tsoi <joetsoi@users.noreply.github.com>"]

[dependencies]
byteorder = "*"
bv = "*"
ggez-goodies = { git = "https://github.com/joetsoi/ggez-goodies.git", branch = "only-input-scene"}
failure = "*"
failure_derive = "*"
#image = "*"
pest = "*"
pest_derive = "*"
rand = "*"
rect_packer = "*"
specs = "0.14.1"
specs-derive = "0.2.0"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
warmy = "0.8.0"
maplit = "*"
lazy_static = "1.2.0"
#ggez = { git = "https://github.com/ggez/ggez" }
loadable_yaml_macro_derive = {path = "../loadable_yaml_macro_derive"}
compat_error = {path = "../compat_error"}

[dependencies.ggez]
git = "https://github.com/ggez/ggez"
default-features = false
