[package]
name = "openmoonstone"
version = "0.3.0"
edition = "2021"

[dependencies]
bv = "*"
byteorder = "*"
color-eyre = "*"
# TODO: change to next release after 0.8.1
# Canvas.set_sampler is currently broken in 0.8.1
# https://github.com/ggez/ggez/issues/1138
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
lazy_static = "*"
maplit = "*"
mint = "*"
pest = "*"
pest_derive = "*"
rand = "*"
rect_packer = "*"
ron = "*"
serde = "*"
serde_derive = "*"
specs = "*"
specs-derive = "*"
thiserror = "*"
